--- a/app/views/layout/carousel.scala.html
+++ b/app/views/layout/carousel.scala.html
@@ -23,7 +23,7 @@
             <img class="carousel-img" src="@CustomDirAssets.versioned("images/carousel/stats-small.png")" alt="Stats">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Generate and visualize your stats interactively</h1>
+                    <h1>Visualize your stats interactively</h1>
                     <p>Create a view with dynamic and responsive widgets visualizing different stats, such as, distributions, scatters, correlations, and box plots.</p>
                     <p><a class="btn btn-lg btn-primary" href="@routes.AppController.dataSets()" role="button">Login</a></p>
                 </div>
