--- a/app/views/admin/formFieldsInput.scala.html
+++ b/app/views/admin/formFieldsInput.scala.html
@@ -8,6 +8,7 @@
 @import org.incal.play.controllers.WebContext._
 @import org.ada.server.models.FieldTypeSpec
 @import org.ada.server.models.FieldTypeId
+@import org.ada.web.controllers.routes
 
 @(
     title: String,
@@ -84,8 +85,11 @@
             }
             </fieldset>
 
+            <hr/>
+
             <div class="actions pull-right">
                 <input type="submit" value="Submit" class="btn btn-primary">
+                <a href="@routes.AdminController.selectRunnable" class="btn btn-default">Cancel</a>
             </div>
         }
         </div>
