--- a/app/views/userprofile/editableUserProfileForm.scala.html
+++ b/app/views/userprofile/editableUserProfileForm.scala.html
@@ -1,4 +1,4 @@
-@import views.html.elements.{inputText, checkboxGroup}
+@import views.html.elements.inputText
 
 @** Very similar to editableUserForm.scala.html, but with key fields hidden from user **@
 @(domainName: String, form: Form[_])(implicit msg: play.api.i18n.Messages)
