--- a/app/views/dataset/fractalis.scala.html
+++ b/app/views/dataset/fractalis.scala.html
@@ -69,7 +69,7 @@
                                     projection: fieldName,
                                     label: fieldLabel,
                                     fieldType: field.fieldType,
-                                    numValues: field.numValues,
+                                    numValues: field.enumValues,
                                     isArray: field.isArray
                                 },
                                 data_set: '@context.dataSetId'
