--- a/app/views/dataset/seriesProcessingFieldTable.scala.html
+++ b/app/views/dataset/seriesProcessingFieldTable.scala.html
@@ -1,8 +1,8 @@
 @import views.html.table.{displayTable, dynamicTable}
 @import views.html.elements.labelValue
 @import org.ada.web.util.typeColumns
-@import org.ada.server.models.SeriesProcessingSpec
-@import org.ada.server.models.SeriesProcessingType
+@import org.ada.server.models.datatrans.SeriesProcessingSpec
+@import org.ada.server.models.datatrans.SeriesProcessingType
 
 @(
     items: Traversable[SeriesProcessingSpec]
