--- a/app/views/dataset/seriesTransformationFieldTable.scala.html
+++ b/app/views/dataset/seriesTransformationFieldTable.scala.html
@@ -1,7 +1,7 @@
 @import views.html.table.{displayTable, dynamicTable}
 @import views.html.elements.labelValue
 @import org.ada.web.util.typeColumns
-@import org.ada.server.models.SeriesTransformationSpec
+@import org.ada.server.models.datatrans.SeriesTransformationSpec
 @import org.incal.spark_ml.models.VectorScalerType
 
 @(
