--- a/app/views/datasetimport/list.scala.html
+++ b/app/views/datasetimport/list.scala.html
@@ -2,10 +2,11 @@
 @import views.html.table.paginatedTable
 @import views.html.dataset.{datasetMenu}
 @import views.html.filter.filterWithJs
-@import org.ada.web.controllers.dataset.routes.{DataSetImportController => dataSetImportRoutes}
+@import org.ada.web.controllers.dataset.dataimport.routes.{DataSetImportController => dataSetImportRoutes}
 @import org.ada.web.util.{formatTimeElement, toHumanReadableCamel, typeColumns}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, Filter, FilterShowFieldStyle}
 @import org.ada.server.models.dataimport._
+@import org.ada.server.models.ScheduledTime
 @import org.incal.play.controllers.WebContext._
 @import org.incal.play.controllers.WebContext
 @import reactivemongo.bson.BSONObjectID
