--- a/app/views/datasetimport/synapseTypeElements.scala.html
+++ b/app/views/datasetimport/synapseTypeElements.scala.html
@@ -1,33 +1,11 @@
 @import org.ada.server.models.dataimport.SynapseDataSetImport
 @import views.html.elements.{inputText, checkbox}
-@import play.api.i18n.Messages
-@import views.html.datasetimport.{settingPanel, dataSetInfoPanel, schedulePanel, dataViewPanel}
+@import org.incal.play.controllers.WebContext
+@import org.incal.play.controllers.WebContext._
 
-@(form: Form[SynapseDataSetImport])(implicit msg: Messages)
+@(form: Form[SynapseDataSetImport])(implicit webContext: WebContext)
 
-@dataSetInfoPanel("synapseDataSetImport", form)
-
-<input type="hidden" id="concreteClass" name="concreteClass" value="@{classOf[SynapseDataSetImport].getName}">
-
-<div class="panel panel-default">
-    <div class="panel-heading">Synapse Import Specifics</div>
-    <div class="panel-body">
-        @inputText("synapseDataSetImport", "tableId", form)
-        @inputText("synapseDataSetImport", "batchSize", form)
-        @checkbox("synapseDataSetImport", "downloadColumnFiles", form)
-        @inputText("synapseDataSetImport", "bulkDownloadGroupNumber", form)
-    </div>
-</div>
-
-@settingPanel(form)
-@dataViewPanel(form)
-@schedulePanel(form)
-
-<script type="text/javascript">
-    $('form').submit(function(ev) {
-        ev.preventDefault();
-        handleSettingSubmission();
-        handleDataViewSubmission();
-        this.submit();
-    });
-</script>
+@inputText("synapseDataSetImport", "tableId", form)
+@inputText("synapseDataSetImport", "batchSize", form)
+@checkbox("synapseDataSetImport", "downloadColumnFiles", form)
+@inputText("synapseDataSetImport", "bulkDownloadGroupNumber", form)
