--- a/app/views/dictionary/create.scala.html
+++ b/app/views/dictionary/create.scala.html
@@ -17,7 +17,7 @@
     @inputText("field", "label", form)
     @inputText("field", "fieldType", form)
     @inputText("field", "isArray", form)
-    @inputText("field", "numValues", form)
+    @inputText("field", "enumValues", form)
     @inputText("field", "displayDecimalPlaces", form)
     @inputText("field", "displayTrueValue", form)
     @inputText("field", "displayFalseValue", form)
