--- a/app/views/dataset/transformSeries.scala.html
+++ b/app/views/dataset/transformSeries.scala.html
@@ -10,7 +10,7 @@
 @import views.html.table.dynamicTableJsImport
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
-@import org.ada.server.models.DataSetSeriesTransformationSpec
+@import org.ada.server.models.datatrans.DataSetSeriesTransformationSpec
 @import views.html.dataset.dynamicFieldTable
 @import views.html.layout.formErrors
 @import org.ada.web.util.enumToValueString
