--- a/app/views/datasetimport/eGaitTypeElements.scala.html
+++ b/app/views/datasetimport/eGaitTypeElements.scala.html
@@ -1,30 +1,8 @@
 @import org.ada.server.models.dataimport.EGaitDataSetImport
 @import views.html.elements.{inputText, checkbox}
-@import play.api.i18n.Messages
-@import views.html.datasetimport.{settingPanel, dataSetInfoPanel, schedulePanel, dataViewPanel}
+@import org.incal.play.controllers.WebContext
+@import org.incal.play.controllers.WebContext._
 
-@(form: Form[EGaitDataSetImport])(implicit msg: Messages)
+@(form: Form[EGaitDataSetImport])(implicit webContext: WebContext)
 
-@dataSetInfoPanel("eGaitDataSetImport", form)
-
-<input type="hidden" id="concreteClass" name="concreteClass" value="@{classOf[EGaitDataSetImport].getName}">
-
-<div class="panel panel-default">
-    <div class="panel-heading">eGaIT Import Specifics</div>
-    <div class="panel-body">
-        @checkbox("eGaitDataSetImport", "importRawData", form)
-    </div>
-</div>
-
-@settingPanel(form)
-@dataViewPanel(form)
-@schedulePanel(form)
-
-<script type="text/javascript">
-    $('form').submit(function(ev) {
-        ev.preventDefault();
-        handleSettingSubmission();
-        handleDataViewSubmission();
-        this.submit();
-    });
-</script>
+@checkbox("eGaitDataSetImport", "importRawData", form)
