--- a/app/views/datasetimport/redCapTypeElements.scala.html
+++ b/app/views/datasetimport/redCapTypeElements.scala.html
@@ -1,35 +1,13 @@
 @import org.ada.server.models.dataimport.RedCapDataSetImport
 @import views.html.elements.{inputText, checkbox}
-@import play.api.i18n.Messages
-@import views.html.datasetimport.{settingPanel, dataSetInfoPanel, schedulePanel, dataViewPanel}
+@import org.incal.play.controllers.WebContext
+@import org.incal.play.controllers.WebContext._
 
-@(form: Form[RedCapDataSetImport])(implicit msg: Messages)
+@(form: Form[RedCapDataSetImport])(implicit webContext: WebContext)
 
-@dataSetInfoPanel("redCapDataSetImport", form)
-
-<input type="hidden" id="concreteClass" name="concreteClass" value="@{classOf[RedCapDataSetImport].getName}">
-
-<div class="panel panel-default">
-    <div class="panel-heading">REDCap Import Specifics</div>
-    <div class="panel-body">
-        @inputText("redCapDataSetImport", "url", form)
-        @inputText("redCapDataSetImport", "token", form)
-        @checkbox("redCapDataSetImport", "importDictionaryFlag", form)
-        @inputText("redCapDataSetImport", "eventNames", form)
-        @inputText("redCapDataSetImport", "categoriesToInheritFromFirstVisit", form)
-        @inputText("redCapDataSetImport", "saveBatchSize", form)
-    </div>
-</div>
-
-@settingPanel(form)
-@dataViewPanel(form)
-@schedulePanel(form)
-
-<script type="text/javascript">
-    $('form').submit(function(ev) {
-        ev.preventDefault();
-        handleSettingSubmission();
-        handleDataViewSubmission();
-        this.submit();
-    });
-</script>
+@inputText("redCapDataSetImport", "url", form)
+@inputText("redCapDataSetImport", "token", form)
+@checkbox("redCapDataSetImport", "importDictionaryFlag", form)
+@inputText("redCapDataSetImport", "eventNames", form)
+@inputText("redCapDataSetImport", "categoriesToInheritFromFirstVisit", form)
+@inputText("redCapDataSetImport", "saveBatchSize", form)
