--- a/app/views/datasettrans/sourceDataSetTypeahead.scala.html
+++ b/app/views/datasettrans/sourceDataSetTypeahead.scala.html
@@ -24,7 +24,7 @@
         populateFieldTypeahedFromUrl(
             $('#sourceDataSetTypeahead'),
             $('#sourceDataSetId'),
-            '@Html(routes.DataSetTransformationController.dataSetNameAndLabels().url)',
+            '@Html(routes.DataSetTransformationController.dataSetIds().url)',
             @FilterShowFieldStyle.LabelsOnly.id,
             null,
             true
